<resources>
    <string name="app_name">PauseApp</string>
    <string name="pauseapp_mayus">PAUSEAPP</string>
    <string name="log_in">Iniciar Sesión</string>
    <string name="register">Registro</string>
    <string name="home">Home</string>
    <string name="actividades">Actividades</string>
    <string name="perfil">Perfil</string>
    <string name="username">Nombre de usuario</string>
    <string name="mail">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="repeat_paswd">Repetir contraseña</string>
    <string name="no_tienes_cuenta">No tienes cuenta?</string>
    <string name="registrate">REGÍSTRATE</string>
    <string name="cuenta">Cuenta</string>
    <string name="preferencias">Preferencias</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="ajustes_de_privacidad">Ajustes de privacidad</string>
    <string name="soporte">Soporte</string>
    <string name="ok">OK</string>
    <string name="centro_de_ayuda">Centro de Ayuda</string>
    <string name="sugerencias">Sugerencias</string>
    <string name="salir">Salir</string>
    <string name="dias_usando_pauseapp">Dias usando PauseApp</string>
    <string name="actividades_realizadas">Actividades realizadas</string>
    <string name="buscar">Buscar...</string>
    <string name="mindfulness">Mindfulness</string>
    <string name="meditacion">Meditación</string>
    <string name="ejercicio">Ejercicio</string>
    <string name="introspeccion">Introspección</string>
    <string name="nuevo_perfil">Nuevo perfil</string>
    <string name="stress_level">Nivel de estrés</string>
    <string name="diario">Diario</string>
    <string name="mensual">Mensual</string>
    <string name="trimestral">Trimestral</string>
    <string name="configuracion">Configuracion</string>
    <string name="friends">Amigos</string>
    <string name="activity_title">Titulo actividad</string>
    <string name="description">Descripción</string>
    <string name="start">Empezar</string>
    <string name="solicitud_de">Solicitud de</string>
    <string name="name">Nombre</string>
    <string name="aceptar">Aceptar</string>
    <string name="status">Estado</string>
    <string name="chat">Chat</string>
    <string name="denegar">Denegar</string>
    <string name="suscripcion_descripcion">Nuestra suscripción incluye actividades exclusivas y la eliminación de todo tipo de anuncios</string>
    <string name="precio">Precio: </string>
    <string name="comprar">Comprar</string>
    <string name="precio_a_pagar">5,99</string>
    <string name="nombre_tarjeta">Nombre Tarjeta</string>
    <string name="n_mero_tarjeta">Número Tarjeta</string>
    <string name="caducidad">Caducidad</string>
    <string name="cvv">CVV</string>
    <string name="visa">Visa</string>
    <string name="paypal">PayPal</string>
    <string name="seleccione_el_m_todo_de_pago">Seleccione el método de pago</string>
    <string name="bizum">Bizum</string>
    <string name="cuenta_bancaria">Cuenta Bancaria</string>
    <string name="correo_paypal">Correo Paypal</string>
    <string name="contrase_a_paypal">Contraseña Paypal</string>
    <string name="telefono_bizum">Telefono Bizum</string>
    <string name="terminos">Términos</string>
    <string name="privacy_policy">Política de privacidad</string>
    <string name="agradecimientos">Agradecimientos</string>
    <string name="activadas">Activadas</string>
    <string name="estado">Estado</string>
    <string name="desactivadas">Desactivadas</string>
    <string name="no_molestar">No molestar</string>
    <string name="activado">Activado</string>
    <string name="intervalo">Intérvalo</string>
    <string name="timerInterval">00 : 00 : 00 : 00</string>
    <string name="configuraci_n_de_las_notificaciones">Configuración de las notificaciones</string>
    <string name="desactivado">Desactivado</string>
    <string name="info">Información</string>
    <string name="pospone">Posponer</string>
    <string name="tiempo_en_la_actividad">Tiempo en la actividad</string>
    <string name="tiempo">TIEMPO</string>
    <string name="preferencias_del_usuario">Preferencias del usuario</string>
    <string name="mensajes">Mensajes</string>
    <string name="de_la_aplicacion">De la aplicación</string>
    <string name="de_los_amigos">De los amigos</string>
    <string name="sonido">Sonido</string>
    <string name="musica_ambiental">Música ambiental</string>
    <string name="audios">Audios</string>
    <string name="respuesta">Respuesta</string>
    <string name="mensajes_motivacionales">Mensajes motivacionales</string>
    <string name="usuario_base">Usuario</string>
    <string name="cambiar_nivel_estres">Cambiar nivel estrés</string>
    <string name="eliminar_cuenta">Eliminar cuenta</string>
    <string name="no_consentir">NO CONSENTIR</string>
    <string name="consentir">CONSENTIR</string>
    <string name="privacidad_texto">PauseAPP recoge tus datos personales para:\n\n- Recomendarte ejercicios de forma más personal\n\n- Poder crear un hábito saludable a través de las notificaciones\n</string>
    <string name="continuar">Continuar</string>
    <string name="nivel_de_estres_anterior">Nivel de estrés anterior</string>
    <string name="nivel_de_estres_actual">Nivel de estrés actual</string>
    <string name="frecuencia">Frecuencia</string>
    <string name="cada_12_horas">Cada 12 horas</string>
    <string name="cada_24_horas">Cada 24 horas</string>
    <string name="titulo_de_la_alerta">Título de la alerta</string>
    <string name="mensaje_de_la_alerta">Mensaje de la alerta</string>
    <string name="crear_alerta">Crear alerta</string>
    <string name="crear_nueva_alerta">Crear nueva alerta</string>
    <string name="nueva_alerta">Nueva alerta</string>
    <string name="anadir">Añadir</string>
    <string name="solicitudes_pendientes">Solicitudes pendientes</string>
    <string name="cambiar_perfil">Cambiar perfil</string>
    <string name="yoga">Yoga</string>
    <string name="premium">Premium</string>
    <string name="respiracion">Respiración</string>
</resources>