<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home_lateral"
        android:title="@string/home"
        />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/profile_logo_menu"
        android:title="@string/perfil"
        />
    <item
        android:id="@+id/nav_friends"
        android:icon="@drawable/friend_lateral"
        android:title="@string/friends"
        />
    <item android:id="@+id/nav_configuration"
        android:icon="@drawable/config_lateral"
        android:title="@string/configuracion"
        />
    <item android:id="@+id/nav_out"
        android:icon="@drawable/exit_lateral"
        android:title="@string/salir"
        />
</menu>
