<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/general_background"
    tools:context=".PaymentActivity">

    <TextView
        android:id="@+id/selectString"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/seleccione_el_m_todo_de_pago"
        android:textSize="28sp"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.267"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/selectString"
        app:layout_constraintBottom_toTopOf="@id/buyButton"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="60dp"
            >

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/visaButton"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/TriangleButton"
        android:background="@drawable/button_triangle"
        android:text="@string/visa"
        android:padding="16dp"
        android:textSize="18sp"
        android:layout_marginTop="70dp"/>


    <LinearLayout
        android:id="@+id/formVisa"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/visaButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:visibility="gone"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_tarjeta"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:padding="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/imagebutton_background"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/n_mero_tarjeta"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:padding="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/imagebutton_background"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/caducidad"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:padding="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/imagebutton_background"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cvv"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:padding="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/imagebutton_background"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonPaypal"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/formVisa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/TriangleButton"
        android:text="@string/paypal"
        android:padding="16dp"
        android:textSize="18sp"
        android:layout_marginTop="40dp"/>

    <LinearLayout
        android:id="@+id/formPaypal"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/buttonPaypal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo_paypal"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:padding="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/imagebutton_background"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrase_a_paypal"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:padding="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/imagebutton_background"
            android:inputType="textPassword"/>
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonBizum"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/formPaypal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/TriangleButton"
        android:text="@string/bizum"
        android:padding="16dp"
        android:textSize="18sp"
        android:layout_marginTop="40dp"/>

    <LinearLayout
        android:id="@+id/formBizum"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/buttonBizum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono_bizum"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:padding="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/imagebutton_background"
            android:inputType="phone"/>
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCuenta"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/formBizum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/TriangleButton"
        android:text="@string/cuenta_bancaria"
        android:padding="16dp"
        android:textSize="18sp"
        android:layout_marginTop="40dp"/>

    <LinearLayout
        android:id="@+id/formCuentaBancaria"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/buttonCuenta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="IBAN"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:padding="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/imagebutton_background"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nombre titular"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:padding="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/imagebutton_background"/>
    </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <Button
        android:id="@+id/buyButton"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:backgroundTint="@color/button_background"
        android:text="@string/comprar"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>