<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding="24dp"
android:backgroundTint="@color/general_background"
app:cardElevation="0dp"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/topAppBar"
        android:layout_marginTop="180dp"
        android:layout_width="0dp"
        android:padding="20dp"
        android:layout_height="wrap_content"
        style="@style/ConfigurationButton"
        android:background="@color/imagebutton_background"
        android:text="@string/nueva_alerta"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/alertTitleEdit"
        app:layout_constraintTop_toBottomOf="@id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:hint="@string/titulo_de_la_alerta"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:background="@color/fragment_color"
        android:layout_marginTop="50dp"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/alertMessageEdit"
        app:layout_constraintTop_toBottomOf="@id/alertTitleEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:hint="@string/mensaje_de_la_alerta"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:background="@color/fragment_color"
        android:padding="12dp"/>

    <!-- Botón crear -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/createAlertButton"
        style="@style/ButtonOne"
        android:layout_width="0dp"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:text="@string/crear_alerta"
        android:textColor="@android:color/white"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/alertMessageEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>