<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/fragment_color"
    android:padding="100dp">

    <TextView
        android:id="@+id/privacyMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/privacidad_texto"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/consentirButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/consentir"
        android:textSize="14sp"
        style="@style/ImageButtonOne"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/privacyMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/noConsentirButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/no_consentir"
        android:textSize="14sp"
        style="@style/ImageButtonOne"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/consentirButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>