<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/general_background"
    tools:context=".ProfileConfigurationActivity">

    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="40dp"
        style="@style/ButtonOne"
        android:text="@string/ok"
        android:textSize="15sp"
        android:padding="20dp"
        android:layout_marginTop="50dp"/>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/okButton"
        app:layout_constraintBottom_toTopOf="@id/exitButton"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="40dp">

            <ImageButton
                android:id="@+id/changeAvatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:src="@drawable/profile_image_change"
                android:backgroundTint="@color/general_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="-10dp"
                />

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/changeAvatar"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="15dp"
                android:layout_marginStart="70dp"
                android:text="@string/usuario_base"
                android:textSize="20sp"
                />

            <!--

                Todos los hints de los edittext
                serán dinámicos, pillando los valores
                de la database

                !-->

            <EditText
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:background="@color/imagebutton_background"
                android:id="@+id/userNameEdit"
                android:hint="@string/username"

                android:textColorHint="@color/white"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/userName"
                app:layout_constraintStart_toStartOf="@id/userName"
                />

            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/userNameEdit"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="45dp"
                android:layout_marginStart="70dp"
                android:text="@string/password"
                android:textSize="20sp"
                />

            <EditText
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:background="@color/imagebutton_background"
                android:id="@+id/passwordEdit"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/password"
                app:layout_constraintStart_toStartOf="@id/password"
                />

            <TextView
                android:id="@+id/mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/passwordEdit"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="45dp"
                android:layout_marginStart="70dp"
                android:text="@string/mail"
                android:textSize="20sp"
                />

            <EditText
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:background="@color/imagebutton_background"
                android:id="@+id/mailEdit"
                android:hint="@string/mail"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/mail"
                app:layout_constraintStart_toStartOf="@id/password"
                />

            <Button
                android:id="@+id/changeStressButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="1"
                android:padding="30dp"
                android:layout_marginTop="40dp"
                style="@style/ButtonOne"
                android:text="@string/cambiar_nivel_estres"
                app:layout_constraintTop_toBottomOf="@id/mailEdit"
                app:layout_constraintStart_toStartOf="@id/mailEdit"
                app:layout_constraintEnd_toEndOf="@id/mailEdit"
                />

            <Button
                android:id="@+id/borrarCuenta"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="1"
                android:padding="30dp"
                android:layout_marginTop="40dp"
                android:textAllCaps="true"
                style="@style/ConfigurationButton"
                android:text="@string/eliminar_cuenta"
                app:layout_constraintTop_toBottomOf="@id/changeStressButton"
                app:layout_constraintStart_toStartOf="@id/mailEdit"
                app:layout_constraintEnd_toEndOf="@id/mailEdit"
                />




        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/exitButton"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:layout_marginBottom="100dp"
        style="@style/ButtonOne"
        android:text="@string/salir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>